--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0"
   },
-  "proxy": "http://localhost:8000/api"
+  "proxy": "http://localhost:8000"
 }
