--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "eslint-config-prettier": "^4.0.0",
     "immer": "^2.1.4",
     "include-media": "^1.4.9",
+    "mdbreact": "^4.11.1",
     "node-sass": "^4.11.0",
     "open-color": "^1.6.3",
-    "react-icons": "^3.4.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
