--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "import/prefer-default-export": 0,
       "import/no-extraneous-dependencies": 0,
       "import/no-named-as-default": 0,
+      "import/no-unresolved": 0,
       "react/prop-types": 0,
       "react/prefer-stateless-function": 0,
       "react/jsx-filename-extension": 0,
