--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mdbreact": "^4.11.1",
     "node-sass": "^4.11.0",
     "open-color": "^1.6.3",
+    "react-color": "^2.17.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
