--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-easy-crop": "^1.10.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-timeago": "^4.4.0",
     "recharts": "^1.5.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
