--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "immer": "^2.1.4",
     "include-media": "^1.4.9",
+    "input-moment": "^0.4.0",
     "mdbreact": "^4.11.1",
     "node-sass": "^4.11.0",
     "open-color": "^1.6.3",
